import { Collection } from 'mongodb';
import { faker } from '@faker-js/faker';
import { Mock } from 'moq.ts';
import * as uuid from 'uuid';

import { Collections, DiveSiteDocument, UserDocument } from '../../../src/data';
import { createTestLogger } from '../../test-logger';
import {
  DefaultDiveSite,
  DefaultDiveSiteManager,
  DiveSiteData,
  DiveSiteManager,
  DiveSitesSortBy,
} from '../../../src/diveSites';
import { fakeDiveSite } from '../../fixtures/fake-dive-site';
import { fakeUser } from '../../fixtures/fake-user';
import { mongoClient } from '../../mongo-client';
import { Profile, User } from '../../../src/users';
import { ValidationError } from '../../../src/errors';

import DiveSiteCreators from '../../fixtures/dive-site-creators.json';
import DiveSites from '../../fixtures/dive-sites.json';
import { SortOrder } from '../../../src/constants';

const log = createTestLogger('default-dive-site-manager');
jest.mock('uuid');

describe('Default Dive Site Manager', () => {
  let Sites: Collection<DiveSiteDocument>;
  let Users: Collection<UserDocument>;
  let Creator: User;

  beforeAll(() => {
    const db = mongoClient.db();
    Sites = db.collection(Collections.DiveSites);
    Users = db.collection(Collections.Users);
    const profile = new Mock<Profile>()
      .setup((p) => p.name)
      .returns('Jacky Michaelson')
      .object();
    Creator = new Mock<User>()
      .setup((u) => u.id)
      .returns('379b88ad-d679-41ee-aa3e-af21deeb5568')
      .setup((u) => u.username)
      .returns('Jacky47')
      .setup((u) => u.profile)
      .returns(profile)
      .object();
  });

  afterEach(() => {
    jest.useRealTimers();
  });

  it('Will retrieve a dive site from the database', async () => {
    const creatorData = fakeUser();
    const siteData = fakeDiveSite({ creator: creatorData._id });
    const manager = new DefaultDiveSiteManager(mongoClient, log);
    const expected = new DefaultDiveSite(mongoClient, log, siteData);
    await Promise.all([
      Users.insertOne(creatorData),
      Sites.insertOne(siteData),
    ]);

    const actual = await manager.getDiveSite(siteData._id);

    expect(actual).toEqual(expected);
  });

  it('Will return undefined when retrieving a dive site that does not exist', async () => {
    const manager = new DefaultDiveSiteManager(mongoClient, log);
    await expect(
      manager.getDiveSite(faker.datatype.uuid()),
    ).resolves.toBeUndefined();
  });

  it('Will create a new dive stie with minimal options', async () => {
    jest.useFakeTimers({
      doNotFake: ['nextTick', 'setImmediate'],
      now: new Date('2023-07-20T11:47:36.692Z'),
    });
    jest
      .spyOn(uuid, 'v4')
      .mockReturnValue('51a4b91e-eef0-40d9-b353-1feb666f3c1f');

    const options: DiveSiteData = {
      name: "Smuggler's Plane",
      location: 'Somewhere in the Bahamas',
    };
    const manager = new DefaultDiveSiteManager(mongoClient, log);
    const site = await manager.createDiveSite(options, Creator);
    jest.runAllTimers();

    expect(site).toMatchSnapshot();
  });

  it('Will create a new dive site with all options set', async () => {
    jest.useFakeTimers({
      doNotFake: ['nextTick', 'setImmediate'],
      now: new Date('2023-07-20T11:47:36.692Z'),
    });
    jest
      .spyOn(uuid, 'v4')
      .mockReturnValue('51a4b91e-eef0-40d9-b353-1feb666f3c1f');

    const options: DiveSiteData = {
      name: 'Chac Mool Cenote',
      description: 'A sweet cavern dive near Playa del Carmen',
      location: 'Play del Carmen, Mexico',
      directions:
        'Take highway 307 West from Playa del Carmen til ya get there.',
      gps: {
        lat: 20.513109539132362,
        lon: -87.24704767409908,
      },
      freeToDive: false,
      shoreAccess: true,
    };
    const manager = new DefaultDiveSiteManager(mongoClient, log);
    const site = await manager.createDiveSite(options, Creator);
    jest.runAllTimers();

    expect(site).toMatchSnapshot();
  });

  it('Will throw a ValidationError when attempting to create a dive site with invalid options', async () => {
    const manager = new DefaultDiveSiteManager(mongoClient, log);
    await expect(
      manager.createDiveSite(
        {
          name: '',
          location: 'Somewhere',
          gps: {
            lat: -9000,
            lon: 8080,
          },
        },
        Creator,
      ),
    ).rejects.toThrowError(ValidationError);
  });

  describe('Searching dive sites', () => {
    let diveSiteCreators: UserDocument[];
    let diveSites: DiveSiteDocument[];
    let manager: DiveSiteManager;

    beforeAll(() => {
      manager = new DefaultDiveSiteManager(mongoClient, log);
      diveSiteCreators = DiveSiteCreators.map((creator) => ({
        ...creator,
        lastLogin: creator.lastLogin ? new Date(creator.lastLogin) : undefined,
        memberSince: new Date(creator.memberSince),
      }));

      diveSites = DiveSites.map((site) => ({
        ...site,
        createdOn: new Date(site.createdOn),
        updatedOn: site.updatedOn ? new Date(site.updatedOn) : undefined,
        gps: site.gps
          ? (site.gps as { type: 'Point'; coordinates: [number, number] })
          : undefined,
      }));
    });

    beforeEach(async () => {
      await Promise.all([
        Users.insertMany(diveSiteCreators),
        Sites.insertMany(diveSites),
      ]);
    });

    it('Will search based on a query string', async () => {
      const sites = await manager.searchDiveSites({
        query: 'celebrated spain pariatur',
        limit: 5,
      });
      expect(sites).toMatchSnapshot();
    });

    [true, false].forEach((shoreAccess) => {
      it(`Will filter based on shore access: ${shoreAccess}`, async () => {
        const sites = await manager.searchDiveSites({
          shoreAccess,
        });
        expect(sites.length).toBeGreaterThan(0);
        for (const site of sites) {
          expect(site.shoreAccess).toBe(shoreAccess);
        }
      });
    });

    [true, false].forEach((freeToDive) => {
      it(`Will filter based on "free to dive": ${freeToDive}`, async () => {
        const sites = await manager.searchDiveSites({
          freeToDive,
        });
        expect(sites.length).toBeGreaterThan(0);
        for (const site of sites) {
          expect(site.freeToDive).toBe(freeToDive);
        }
      });
    });

    it.todo('Location!');
    it('Will filter by location', async () => {});

    it('Will filter by creator', async () => {
      const sites = await manager.searchDiveSites({
        creator: diveSiteCreators[0].username.toUpperCase(),
      });
      expect(sites.length).toBeGreaterThan(0);
      for (const site of sites) {
        await expect(site.getCreator()).resolves.toEqual({
          displayName: diveSiteCreators[0].profile!.name,
          id: diveSiteCreators[0]._id,
          username: diveSiteCreators[0].username,
        });
      }
    });

    it('Will return no results if creator cannot be found', async () => {
      const sites = await manager.searchDiveSites({
        creator: 'no-such-user',
      });
      expect(sites).toHaveLength(0);
    });

    it('Will allow pagination', async () => {
      const sites = await manager.searchDiveSites({
        skip: 12,
        limit: 6,
      });
      expect(sites).toMatchSnapshot();
    });

    [
      { sortBy: DiveSitesSortBy.Name, sortOrder: SortOrder.Ascending },
      { sortBy: DiveSitesSortBy.Name, sortOrder: SortOrder.Descending },
      { sortBy: DiveSitesSortBy.Rating, sortOrder: SortOrder.Ascending },
      { sortBy: DiveSitesSortBy.Rating, sortOrder: SortOrder.Descending },
    ].forEach((testCase) => {
      it(`Will sort results by ${testCase.sortBy} in ${testCase.sortOrder} order`, async () => {
        const sites = await manager.searchDiveSites({
          sortBy: testCase.sortBy,
          sortOrder: testCase.sortOrder,
          limit: 5,
        });
        expect(sites).toMatchSnapshot();
      });
    });
  });
});
