// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Dive Site Manager Searching dive sites Will allow pagination 1`] = `
[
  {
    "averageDifficulty": 2.66,
    "averageRating": 1.84,
    "createdOn": 2023-03-21T10:53:58.590Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Impedit harum repellat esse est aperiam quibusdam magnam error. Culpa dolorem corporis alias iusto officiis molestias ipsa fuga assumenda.",
    "directions": "Deleniti cumque laudantium ad repellat eaque iure quibusdam consequatur.",
    "freeToDive": false,
    "gps": {
      "lat": -55.02,
      "lon": 137.23,
    },
    "id": "28ca48df-5c33-41bc-958b-b026e90e7f10",
    "location": "Rogers Mongolia",
    "name": "acclaimed cabana",
    "shoreAccess": true,
    "updatedOn": 2021-11-25T08:46:34.603Z,
  },
  {
    "averageDifficulty": 1.03,
    "averageRating": 4.3,
    "createdOn": 2019-02-09T15:01:07.058Z,
    "creator": {
      "displayName": "Marian White",
      "id": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "description": "Optio exercitationem vel tempore porro. Doloribus quis dicta quasi aspernatur officiis doloremque natus quas fugit.",
    "directions": "Ducimus nulla corporis.",
    "freeToDive": false,
    "gps": {
      "lat": -74,
      "lon": -7.78,
    },
    "id": "cba33c66-5915-4336-b5a9-93a76b222322",
    "location": "Santa Clara Ethiopia",
    "name": "sore entertainment",
    "shoreAccess": false,
    "updatedOn": 2022-11-17T01:00:25.542Z,
  },
  {
    "averageDifficulty": 4.25,
    "averageRating": 2.98,
    "createdOn": 2020-03-29T01:49:50.145Z,
    "creator": {
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "description": "Soluta eius ullam. Natus alias iure beatae doloribus.",
    "directions": "Quis tempora officia perspiciatis expedita.",
    "freeToDive": true,
    "gps": {
      "lat": 89.56,
      "lon": 178.59,
    },
    "id": "07f0d7ae-13a2-40fc-84ae-bb8bfd497ad6",
    "location": "Daytona Beach Morocco",
    "name": "nautical architect",
    "shoreAccess": true,
    "updatedOn": 2022-12-29T06:52:56.387Z,
  },
  {
    "averageDifficulty": 4.28,
    "averageRating": 1.73,
    "createdOn": 2020-12-28T03:56:34.487Z,
    "creator": {
      "displayName": "Cory Braun",
      "id": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "username": "Sigmund_Muller",
    },
    "description": "Officia magnam nulla quisquam quisquam. Suscipit aliquid eaque eaque molestias molestiae.",
    "directions": "Iure debitis amet.",
    "freeToDive": false,
    "gps": {
      "lat": -57.28,
      "lon": 44.43,
    },
    "id": "580026e2-3e5e-4e4e-afad-0993dbbdffd7",
    "location": "Tacoma Angola",
    "name": "nutty feed",
    "shoreAccess": true,
    "updatedOn": 2022-11-28T20:52:59.435Z,
  },
  {
    "averageDifficulty": 2.63,
    "averageRating": 3.67,
    "createdOn": 2017-12-25T19:21:04.472Z,
    "creator": {
      "displayName": "Marilyn Miller Sr.",
      "id": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "description": "Quis numquam iure. Quas cumque assumenda.",
    "directions": "Asperiores esse reprehenderit optio molestias at.",
    "freeToDive": true,
    "gps": {
      "lat": 56.82,
      "lon": -98.24,
    },
    "id": "9f122197-5e1d-4a67-9cca-62222f44be50",
    "location": "Milford Comoros",
    "name": "long-term riding",
    "shoreAccess": false,
    "updatedOn": 2020-09-18T14:08:45.081Z,
  },
  {
    "averageDifficulty": 3.86,
    "averageRating": 4.42,
    "createdOn": 2019-04-08T02:11:40.385Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Expedita at magnam earum nulla ea aspernatur possimus. Tenetur debitis quasi eaque.",
    "directions": "Perspiciatis explicabo repellat atque dolorum dicta.",
    "freeToDive": false,
    "gps": {
      "lat": -18.21,
      "lon": -141.85,
    },
    "id": "9765ebea-5076-4ef2-97ec-3f63c4a2455e",
    "location": "South San Francisco Northern Mariana Islands",
    "name": "vital banquette",
    "shoreAccess": true,
    "updatedOn": 2021-07-29T14:32:50.322Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will search based on a query string 1`] = `
[
  {
    "averageDifficulty": 3.16,
    "averageRating": 3.23,
    "createdOn": 2022-05-29T21:49:42.042Z,
    "creator": {
      "displayName": "Anita Kreiger",
      "id": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "description": "Ullam nulla accusamus. Aspernatur dicta omnis similique.",
    "directions": "Repudiandae culpa ex quam deleniti nemo veniam molestias provident.",
    "freeToDive": false,
    "gps": {
      "lat": 69.4,
      "lon": -79.25,
    },
    "id": "9f0c183e-ca0f-400e-96d3-d1bef7b75262",
    "location": "The Villages Australia",
    "name": "celebrated dimple",
    "shoreAccess": true,
    "updatedOn": 2023-06-05T05:10:42.737Z,
  },
  {
    "averageDifficulty": 3.26,
    "averageRating": 4.37,
    "createdOn": 2019-11-19T00:27:46.410Z,
    "creator": {
      "displayName": "Mattie Franey",
      "id": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "username": "Nicolette_Gleason",
    },
    "description": "Pariatur quasi inventore ratione similique error. Ipsum rerum earum neque rem aliquam corrupti pariatur optio suscipit.",
    "directions": "Hic non iusto.",
    "freeToDive": false,
    "gps": {
      "lat": -60.01,
      "lon": 59.56,
    },
    "id": "215a4872-85e7-4083-9f31-d2523ef463a4",
    "location": "West Lafayette Iran",
    "name": "victorious peen",
    "shoreAccess": false,
    "updatedOn": 2021-03-17T08:23:42.548Z,
  },
  {
    "averageDifficulty": 1.47,
    "averageRating": 3.76,
    "createdOn": 2019-02-06T10:29:19.198Z,
    "creator": {
      "displayName": "Joey Kulas III",
      "id": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "description": "Quae pariatur nulla esse. Perferendis eveniet necessitatibus molestiae.",
    "directions": "Explicabo recusandae harum recusandae debitis pariatur nesciunt aliquam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": -3.09,
      "lon": 37.26,
    },
    "id": "30f91f87-5658-4ef0-a246-56181a865035",
    "location": "Fort Pierce Aruba",
    "name": "puny manifestation",
    "shoreAccess": true,
    "updatedOn": 2023-04-26T01:57:55.147Z,
  },
  {
    "averageDifficulty": 3.89,
    "averageRating": 4.3,
    "createdOn": 2023-06-21T18:59:09.050Z,
    "creator": {
      "displayName": "Joey Kulas III",
      "id": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "description": "Repellendus perspiciatis pariatur eum. Fugiat voluptatibus tempore ut illum.",
    "directions": "Fugiat dolore similique quibusdam inventore quasi accusamus.",
    "freeToDive": true,
    "gps": {
      "lat": -63.85,
      "lon": 47.27,
    },
    "id": "8b1a5bd0-7439-4afa-9c4f-baaa8f9224bb",
    "location": "West Sacramento Spain",
    "name": "biodegradable oncology",
    "shoreAccess": false,
    "updatedOn": 2021-01-14T22:13:36.210Z,
  },
  {
    "averageDifficulty": 3.48,
    "averageRating": 2.47,
    "createdOn": 2022-01-23T01:36:53.460Z,
    "creator": {
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "description": "Mollitia odit dignissimos impedit minima beatae. Est voluptatem ut pariatur voluptates.",
    "directions": "Delectus quaerat debitis nisi earum repellendus.",
    "freeToDive": false,
    "gps": {
      "lat": -60.26,
      "lon": -101.44,
    },
    "id": "61c0d84f-6eb3-422d-bf70-3d2287f97e87",
    "location": "East Honolulu Georgia",
    "name": "humiliating attendance",
    "shoreAccess": true,
    "updatedOn": 2022-04-03T09:15:31.932Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by name in asc order 1`] = `
[
  {
    "averageDifficulty": 2.66,
    "averageRating": 1.84,
    "createdOn": 2023-03-21T10:53:58.590Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Impedit harum repellat esse est aperiam quibusdam magnam error. Culpa dolorem corporis alias iusto officiis molestias ipsa fuga assumenda.",
    "directions": "Deleniti cumque laudantium ad repellat eaque iure quibusdam consequatur.",
    "freeToDive": false,
    "gps": {
      "lat": -55.02,
      "lon": 137.23,
    },
    "id": "28ca48df-5c33-41bc-958b-b026e90e7f10",
    "location": "Rogers Mongolia",
    "name": "acclaimed cabana",
    "shoreAccess": true,
    "updatedOn": 2021-11-25T08:46:34.603Z,
  },
  {
    "averageDifficulty": 4.34,
    "averageRating": 1.15,
    "createdOn": 2023-02-13T09:38:26.740Z,
    "creator": {
      "displayName": "Cory Braun",
      "id": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "username": "Sigmund_Muller",
    },
    "description": "Ea velit dolorem enim. Iste aliquam alias occaecati.",
    "directions": "Sunt voluptatem distinctio explicabo maiores molestias adipisci qui asperiores harum.",
    "freeToDive": false,
    "gps": {
      "lat": -11.26,
      "lon": 105.09,
    },
    "id": "a0071029-f89e-4cfe-8dee-efaef991f4a9",
    "location": "Buena Park Wallis and Futuna",
    "name": "accurate porthole",
    "shoreAccess": false,
    "updatedOn": 2021-06-16T07:34:15.095Z,
  },
  {
    "averageDifficulty": 1.27,
    "averageRating": 1.59,
    "createdOn": 2019-01-16T14:47:33.007Z,
    "creator": {
      "displayName": "Doreen Murray",
      "id": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "username": "Jeanne.Wiegand11",
    },
    "description": "Dolorem neque voluptatem quia accusamus pariatur. Suscipit quis eveniet sit dolores nesciunt magnam.",
    "directions": "Culpa exercitationem magnam facilis nemo repudiandae alias.",
    "freeToDive": false,
    "gps": {
      "lat": 52.53,
      "lon": 16.45,
    },
    "id": "a3339829-3da2-45d9-9a01-538f410b2897",
    "location": "York Netherlands Antilles",
    "name": "acidic glider",
    "shoreAccess": false,
    "updatedOn": 2023-03-09T04:28:01.061Z,
  },
  {
    "averageDifficulty": 3.2,
    "averageRating": 3.93,
    "createdOn": 2022-09-06T05:18:31.548Z,
    "creator": {
      "displayName": "Cecilia Swaniawski",
      "id": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "description": "Autem voluptatum ea voluptatibus voluptatem atque occaecati eius quaerat. Voluptates dignissimos sed.",
    "directions": "Sint eligendi impedit illum.",
    "freeToDive": false,
    "gps": {
      "lat": -30.53,
      "lon": 97.29,
    },
    "id": "0b62958f-1bf5-486e-9ce2-2b7763470ba8",
    "location": "Corpus Christi New Caledonia",
    "name": "active millimeter",
    "shoreAccess": true,
    "updatedOn": 2021-02-09T09:33:41.514Z,
  },
  {
    "averageDifficulty": 2.35,
    "averageRating": 3.78,
    "createdOn": 2021-11-29T06:13:51.812Z,
    "creator": {
      "displayName": "Muriel Hettinger DVM",
      "id": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "username": "Camilla62",
    },
    "description": "Labore veritatis laboriosam tenetur provident consequuntur. Tempore eaque fuga eligendi iste earum voluptatibus.",
    "directions": "Necessitatibus corrupti quae repellendus occaecati esse architecto soluta minus ipsa.",
    "freeToDive": true,
    "gps": {
      "lat": 35.47,
      "lon": -161.85,
    },
    "id": "137a1b5c-5acc-47e5-a441-453c3f4b10fe",
    "location": "Rockwall Niue",
    "name": "advanced pancake",
    "shoreAccess": true,
    "updatedOn": 2020-10-12T18:34:02.420Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by name in desc order 1`] = `
[
  {
    "averageDifficulty": 4.42,
    "averageRating": 1.69,
    "createdOn": 2018-08-21T17:27:42.702Z,
    "creator": {
      "displayName": "Jerome Wunsch",
      "id": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "username": "Elijah44",
    },
    "description": "Doloribus omnis error doloremque dolorem. Consequatur adipisci dolore vitae quam suscipit soluta deleniti suscipit architecto.",
    "directions": "Ex libero odio libero modi iusto quod iure dolorum.",
    "freeToDive": true,
    "gps": {
      "lat": -6.98,
      "lon": -88.58,
    },
    "id": "14fd553b-885a-4401-8f35-af736d6c11d0",
    "location": "Paterson Colombia",
    "name": "zany atmosphere",
    "shoreAccess": false,
    "updatedOn": 2021-10-14T05:21:40.588Z,
  },
  {
    "averageDifficulty": 1.09,
    "averageRating": 3.63,
    "createdOn": 2021-04-11T19:16:55.964Z,
    "creator": {
      "displayName": "Cory Braun",
      "id": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "username": "Sigmund_Muller",
    },
    "description": "Eum beatae maxime temporibus iusto qui praesentium esse similique similique. Blanditiis possimus tenetur cum perspiciatis sapiente debitis consectetur corporis.",
    "directions": "Expedita magni laboriosam sed excepturi ipsum earum quae nulla.",
    "freeToDive": false,
    "gps": {
      "lat": -63.97,
      "lon": -151.04,
    },
    "id": "35864d0c-ef73-488c-8265-8590b0675e3a",
    "location": "Springdale Georgia",
    "name": "young freezer",
    "shoreAccess": false,
    "updatedOn": 2022-06-20T09:49:56.155Z,
  },
  {
    "averageDifficulty": 2.96,
    "averageRating": 4.54,
    "createdOn": 2020-05-12T01:09:55.092Z,
    "creator": {
      "displayName": "Mattie Franey",
      "id": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "username": "Nicolette_Gleason",
    },
    "description": "Fugit possimus itaque qui odit placeat. Necessitatibus culpa eos nisi voluptas distinctio exercitationem mollitia atque aliquam.",
    "directions": "Facilis odit quas unde rerum ipsam ex.",
    "freeToDive": false,
    "gps": {
      "lat": 11.58,
      "lon": -76.92,
    },
    "id": "b03829c9-ee2c-4d9c-b3a8-156ca7881cfa",
    "location": "Westminster Uruguay",
    "name": "yellow bail",
    "shoreAccess": false,
    "updatedOn": 2022-01-18T09:21:18.871Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.96,
    "createdOn": 2021-10-18T08:34:35.904Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Iste vel assumenda mollitia porro odit iste voluptatem. Impedit rerum voluptate.",
    "directions": "Dolores vel voluptate labore nisi porro ducimus amet.",
    "freeToDive": true,
    "gps": {
      "lat": 36.58,
      "lon": -76.93,
    },
    "id": "85128650-efb2-445c-ac25-179d64a7928e",
    "location": "Lincoln Mauritania",
    "name": "worthy retrospectivity",
    "shoreAccess": true,
    "updatedOn": 2021-05-02T06:49:13.715Z,
  },
  {
    "averageDifficulty": 2.36,
    "averageRating": 2.46,
    "createdOn": 2021-01-19T19:16:44.463Z,
    "creator": {
      "displayName": "Taylor Will",
      "id": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "username": "Casimir_Reynolds11",
    },
    "description": "Ipsa dolorum sit inventore iste fugiat excepturi sequi impedit. Repudiandae tempore nam deserunt sed dicta harum.",
    "directions": "Vel nisi consequuntur saepe tenetur dolorum fugiat.",
    "freeToDive": false,
    "gps": {
      "lat": -50.54,
      "lon": 4.55,
    },
    "id": "057f389a-368c-44a7-8401-7e466aa204f0",
    "location": "Round Rock Saint Vincent and the Grenadines",
    "name": "wise corridor",
    "shoreAccess": true,
    "updatedOn": 2023-02-28T00:19:44.128Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by rating in asc order 1`] = `
[
  {
    "averageDifficulty": 1.21,
    "averageRating": 1,
    "createdOn": 2021-06-20T02:37:09.484Z,
    "creator": {
      "displayName": "Marilyn Miller Sr.",
      "id": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "description": "Ullam maiores vero molestias nobis deserunt. Magni laborum animi nihil.",
    "directions": "Ipsa enim temporibus explicabo soluta totam sequi aliquid.",
    "freeToDive": false,
    "gps": {
      "lat": 5.25,
      "lon": 34.05,
    },
    "id": "c2888ba4-bd38-4c30-89ba-8faf9b847d58",
    "location": "Cuyahoga Falls Sudan",
    "name": "huge filth",
    "shoreAccess": false,
    "updatedOn": 2021-09-12T01:35:48.732Z,
  },
  {
    "averageDifficulty": 3.74,
    "averageRating": 1,
    "createdOn": 2020-11-06T07:36:55.182Z,
    "creator": {
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "description": "Saepe tempora veritatis doloremque voluptatum quaerat atque consectetur quia. Saepe dolorum cumque occaecati.",
    "directions": "Delectus atque pariatur nulla magnam dolorem quia cum.",
    "freeToDive": false,
    "gps": {
      "lat": 77.85,
      "lon": -81.48,
    },
    "id": "cae9df82-4904-4a9d-bdec-b70403b34942",
    "location": "Attleboro Estonia",
    "name": "legal trout",
    "shoreAccess": true,
    "updatedOn": 2022-02-15T15:45:05.866Z,
  },
  {
    "averageDifficulty": 2.78,
    "averageRating": 1.02,
    "createdOn": 2022-11-29T16:31:44.981Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Eaque ex voluptatibus voluptatem quidem tempore animi eius. Dicta deleniti doloribus ducimus aspernatur.",
    "directions": "Provident corrupti ipsam saepe dolores distinctio.",
    "freeToDive": false,
    "gps": {
      "lat": -48.43,
      "lon": 14.08,
    },
    "id": "db6ae2fa-e5ef-4407-823c-25b8d0ea5cb3",
    "location": "Corvallis Martinique",
    "name": "mild lounge",
    "shoreAccess": true,
    "updatedOn": 2021-12-02T13:09:31.374Z,
  },
  {
    "averageDifficulty": 3.39,
    "averageRating": 1.05,
    "createdOn": 2018-11-09T01:38:25.777Z,
    "creator": {
      "displayName": "Whitney Ullrich",
      "id": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "username": "Orie.Fahey",
    },
    "description": "Laboriosam corrupti aspernatur vel quos mollitia repellat voluptatem illo incidunt. Excepturi ex modi voluptate quasi minus.",
    "directions": "Itaque ducimus harum quam ducimus eius nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": -33.57,
      "lon": -92.51,
    },
    "id": "0ada1ccb-2be1-4d87-a3dc-bd18b7fab768",
    "location": "Phoenix Saint Lucia",
    "name": "expensive committee",
    "shoreAccess": true,
    "updatedOn": 2022-05-28T23:39:42.636Z,
  },
  {
    "averageDifficulty": 1.37,
    "averageRating": 1.06,
    "createdOn": 2020-12-07T03:46:32.660Z,
    "creator": {
      "displayName": "Maxine Conn DDS",
      "id": "79fea7a7-2448-4e0a-b119-47c994e00266",
      "username": "Carolina_OConner93",
    },
    "description": "Sunt saepe at expedita veritatis architecto iure officia blanditiis. Blanditiis maxime laboriosam.",
    "directions": "Cupiditate cumque dolorum dolor sapiente sit quidem voluptas.",
    "freeToDive": false,
    "gps": {
      "lat": -69.31,
      "lon": -13.59,
    },
    "id": "ea060140-8cc3-4ba3-b4c8-144171104c03",
    "location": "Joplin Somalia",
    "name": "dimpled telescreen",
    "shoreAccess": false,
    "updatedOn": 2023-03-23T07:57:43.199Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by rating in desc order 1`] = `
[
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.96,
    "createdOn": 2021-10-18T08:34:35.904Z,
    "creator": {
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "description": "Iste vel assumenda mollitia porro odit iste voluptatem. Impedit rerum voluptate.",
    "directions": "Dolores vel voluptate labore nisi porro ducimus amet.",
    "freeToDive": true,
    "gps": {
      "lat": 36.58,
      "lon": -76.93,
    },
    "id": "85128650-efb2-445c-ac25-179d64a7928e",
    "location": "Lincoln Mauritania",
    "name": "worthy retrospectivity",
    "shoreAccess": true,
    "updatedOn": 2021-05-02T06:49:13.715Z,
  },
  {
    "averageDifficulty": 3.78,
    "averageRating": 4.96,
    "createdOn": 2022-08-15T16:49:39.788Z,
    "creator": {
      "displayName": "Jerome Wunsch",
      "id": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "username": "Elijah44",
    },
    "description": "Dicta a enim. Aliquid cum magni ut maiores asperiores perspiciatis itaque laboriosam occaecati.",
    "directions": "Esse possimus sint reiciendis aliquid ut delectus.",
    "freeToDive": false,
    "gps": {
      "lat": 47.13,
      "lon": 38.79,
    },
    "id": "d4480368-98fe-479f-89cd-e49768fafa3a",
    "location": "Springdale New Zealand",
    "name": "required lunchroom",
    "shoreAccess": false,
    "updatedOn": 2021-01-01T12:46:34.604Z,
  },
  {
    "averageDifficulty": 3.17,
    "averageRating": 4.93,
    "createdOn": 2021-10-30T14:48:40.374Z,
    "creator": {
      "displayName": "Tracey Frami",
      "id": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "description": "Non ut culpa in officia neque deserunt. Non nisi a deleniti nostrum ad.",
    "directions": "Magni quibusdam ab corporis itaque consectetur numquam cum eum tempore.",
    "freeToDive": true,
    "gps": {
      "lat": 17.83,
      "lon": -77.92,
    },
    "id": "0d7b540b-90db-4af6-8c7c-b75cbbaebaf5",
    "location": "Santee Wallis and Futuna",
    "name": "authentic fisting",
    "shoreAccess": true,
    "updatedOn": 2022-09-11T21:13:28.275Z,
  },
  {
    "averageDifficulty": 4.62,
    "averageRating": 4.88,
    "createdOn": 2022-05-12T17:21:18.211Z,
    "creator": {
      "displayName": "Jerome Wunsch",
      "id": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "username": "Elijah44",
    },
    "description": "Sit nisi ea. Deserunt enim veniam cum doloribus id enim dolore aspernatur.",
    "directions": "Dolores aut accusamus omnis facilis quibusdam a animi soluta culpa.",
    "freeToDive": true,
    "gps": {
      "lat": -42.9,
      "lon": 132.9,
    },
    "id": "46fcee81-4aa3-42f2-aed4-daf355588e2a",
    "location": "Tustin Jamaica",
    "name": "deep expectancy",
    "shoreAccess": false,
    "updatedOn": 2022-02-04T11:44:26.321Z,
  },
  {
    "averageDifficulty": 3.56,
    "averageRating": 4.87,
    "createdOn": 2018-04-20T17:33:51.133Z,
    "creator": {
      "displayName": "Muriel Hettinger DVM",
      "id": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "username": "Camilla62",
    },
    "description": "Officia dolorum odit sapiente sapiente soluta nulla doloremque. Cupiditate dolore deserunt nihil voluptatum.",
    "directions": "Rerum soluta laboriosam libero deserunt beatae eum sint incidunt.",
    "freeToDive": true,
    "gps": {
      "lat": -56.87,
      "lon": -14.75,
    },
    "id": "605142fc-f670-45f0-82ce-127ccfcfeec1",
    "location": "Lubbock Saint Helena",
    "name": "showy shore",
    "shoreAccess": false,
    "updatedOn": 2022-04-30T02:44:50.919Z,
  },
]
`;

exports[`Default Dive Site Manager Will create a new dive site with all options set 1`] = `
{
  "averageDifficulty": 0,
  "averageRating": 0,
  "createdOn": 2023-07-20T11:47:36.692Z,
  "creator": {
    "displayName": "Jacky Michaelson",
    "id": "379b88ad-d679-41ee-aa3e-af21deeb5568",
    "username": "Jacky47",
  },
  "description": "A sweet cavern dive near Playa del Carmen",
  "directions": "Take highway 307 West from Playa del Carmen til ya get there.",
  "freeToDive": false,
  "gps": {
    "lat": 20.513109539132362,
    "lon": -87.24704767409908,
  },
  "id": "51a4b91e-eef0-40d9-b353-1feb666f3c1f",
  "location": "Play del Carmen, Mexico",
  "name": "Chac Mool Cenote",
  "shoreAccess": true,
  "updatedOn": 2023-07-20T11:47:36.692Z,
}
`;

exports[`Default Dive Site Manager Will create a new dive stie with minimal options 1`] = `
{
  "averageDifficulty": 0,
  "averageRating": 0,
  "createdOn": 2023-07-20T11:47:36.692Z,
  "creator": {
    "displayName": "Jacky Michaelson",
    "id": "379b88ad-d679-41ee-aa3e-af21deeb5568",
    "username": "Jacky47",
  },
  "description": undefined,
  "directions": undefined,
  "freeToDive": undefined,
  "gps": undefined,
  "id": "51a4b91e-eef0-40d9-b353-1feb666f3c1f",
  "location": "Somewhere in the Bahamas",
  "name": "Smuggler's Plane",
  "shoreAccess": undefined,
  "updatedOn": 2023-07-20T11:47:36.692Z,
}
`;
